<resources>
    <string name="app_name">Audition Street - Casting Agency</string>
    <string name="action_settings">Setting</string>
    <string name="str_login">Sign In Fragment</string>
    <string name="str_welcome">Welcome,</string>
    <string name="str_create_account">Create account to continue!</string>
    <string name="str_email">Please enter email</string>
    <string name="str_user_name">Please enter user name</string>
    <string name="str_password">password</string>
    <string name="str_social_type">socialType</string>
    <string name="str_socialId">socialId</string>
    <string name="str_isSocial">isSocial</string>
    <string name="str_facebook">Facebook</string>
    <string name="str_social_email">email</string>
    <string name="str_social_id">id</string>
    <string name="str_social_first_name">first_name</string>
    <string name="str_social_last_name">last_name</string>
    <string name="err_email_msg">Email address already exist</string>
    <string name="str_token">deviceToken</string>
    <string name="str_confirm_password">Please enter password again</string>
    <string name="str_pwd">Please enter password</string>
    <string name="str_sign_up">SignUp</string>
    <string name="gallery_select_title_msg">Tap to select</string>
    <string name="folder">Folder</string>
    <string name="str_username">name</string>
    <string name="str_useremail">email</string>
    <string name="err_user_name">Please enter user name</string>
    <string name="err_email">Please enter email</string>
    <string name="err_password">Please enter password</string>
    <string name="err_confirm_password">Please enter confirm password</string>
    <string name="err_valid_email">Please enter valid email</string>
    <string name="err_password_lenght">Password should be 6 characters</string>
    <string name="err_passwrd_confirm">Password and confirm password does not match</string>
    <string name="err_facebook_authentication_fail">Please try again later</string>
    <string name="str_true">true</string>
    <string name="str_false">false</string>
    <string name="str_sign_in">Sign in to continue!</string>
    <string name="str_sign_in_text">Sign In</string>
    <string name="str_email_tv">Email</string>
    <string name="str_password_tv">Password</string>
    <string name="str_or_via">or via</string>
    <string name="str_dont_have">Don\'t have an account?<font fgcolor='#FF773B'> Sign Up</font> </string>
    <string name="err_invalid_credentials">Invalid credentials</string>
    <string name="err_no_network_available">Please check your internet connection and try again later.</string>
    <string name="err_empty_email">Please enter email</string>
    <string name="err_empty_password">Please enter password</string>
    <string name="str_home">Home</string>
    <string name="str_project">Projects</string>
    <string name="str_chat">Chat</string>
    <string name="str_account">Account</string>
    <string name="str_experiances">Experiance</string>
    <string name="str_applied_project">Applied Projects</string>
    <string name="str_home_selected_project">Selected Projects</string>
    <string name="str_image">Images</string>
    <string name="str_video">Videos</string>
    <string name="str_bio">Bio</string>
    <string name="str_home_fragment">Home Fragment</string>
    <string name="str_shortlist">Shortlisted</string>
    <string name="str_application">Applications</string>
    <string name="str_view_all">View All</string>
    <string name="str_add_media">Add Media</string>
    <string name="str_coming_soon">Coming Soon..</string>
    <string name="str_view_details">View Details</string>
    <string name="str_view_profile">View Profile</string>
    <string name="str_view_video">View Video</string>
    <string name="str_shortlist_frag">ShortList Fragment</string>
    <string name="str_all_application">All Application Fragment</string>
    <string name="str_select_project">Select Project</string>
    <string name="str_shortlst">Shortlist</string>
    <string name="str_block">Block</string>
    <string name="str_select_projects">Select Projects</string>
    <string name="str_all_application_video">All Application Video Fragment</string>
    <string name="facebook_app_id">1549035688801621</string>
    <string name="fb_login_protocol_scheme">fb1549035688801621</string>
    <string name="facebook_client_token">e92595d7bb4de201ca2e30fab6237c02</string>
    <string name="str_profile">Profile Fragment</string>
    <string name="str_profile_heading">Profile</string>
    <string name="str_film_studio">Film Studio Play</string>
    <string name="str_casting_agency">Casting Agency</string>
    <string name="str_year">00</string>
    <string name="str_bio_profile">Please enter bio here...</string>
    <string name="str_year_in_industry">Years In Industry</string>
    <string name="str_work">Work</string>
    <string name="str_done">Done</string>
    <string name="str_company_name_label">companyName</string>
    <string name="str_agency_name_label">agencyType</string>
    <string name="str_year_label">year</string>
    <string name="str_bio_label">bio</string>
    <string name="str_casting_id">castingId</string>
    <string name="str_image_label">Image</string>
    <string name="str_other_user_profile">Other User Profile Fragment</string>
    <string name="str_projects">Project Fragment</string>
    <string name="str_no_projects">You Don\'t have any active Project</string>
    <string name="str_create_project">Create Project</string>
    <string name="str_add_project">Add Project</string>
    <string name="str_view_detail">View Details</string>
    <string name="str_project_heading">Project:</string>
    <string name="str_project_detail">Project Detail</string>
    <string name="str_image_error">You can choose max 4 images at a time.If you want to edit please delete previous image.</string>
    <string name="str_video_error">You can choose max 1 video at a time.If you want to edit please delete previous one.</string>
    <string name="select_date">Select Date</string>
    <string name="str_criteria">Criteria:</string>
    <string name="str_age">Age:</string>
    <string name="str_height">Height:</string>
    <string name="str_languages">Languages:</string>
    <string name="str_dates">Shooting Dates:</string>
    <string name="str_location">Location:</string>
    <string name="str_description">Description:</string>
    <string name="str_to">\u0020to\u0020</string>
    <string name="str_empty">- -</string>
    <string name="str_title">Title of Project</string>
    <string name="str_add_title">Add Title</string>
    <string name="str_crtria">Criteria</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_age_range">Age Range :\u0020</string>
    <string name="str_height_ft">Height(Ft)</string>
    <string name="str_height_In">Height(In)</string>
    <string name="str_body_type">Body Type</string>
    <string name="str_skin_tone">Skin Tone</string>
    <string name="str_experiance">Experiance</string>
    <string name="str_language">Language</string>
    <string name="str_shooting_Date">Shooting Date</string>
    <string name="str_date_start">Select Start Date</string>
    <string name="str_date_end">Select End Date</string>
    <string name="str_no_admin_found">No admin found.Please add admin first.</string>
    <string name="str_no_user">No user found to create group admin</string>
    <string name="str_no_language_found">No language found.Please add language first.</string>
    <string name="str_no_body_type_found">No body type found.Please add body type first.</string>
    <string name="str_no_skin_tone_found">No skin tone found.Please add skin tone first.</string>
    <string name="str_divider">-</string>
    <string name="str_locatn">Add Location</string>
    <string name="str_dates_project">Shooting Dates</string>
    <string name="str_location_project">Location</string>
    <string name="str_desc">Description</string>
    <string name="str_type">Type here...</string>
    <string name="str_subadmin">Sub-Admins</string>
    <string name="str_create">Create</string>
    <string name="str_admin">Please select admins</string>
    <string name="str_select_admin">Select Admins</string>
    <string name="str_ok">Ok</string>
    <string name="str_start_Date">Please select start date first</string>
    <string name="dd_mm_yy">dd/MM/yy</string>
    <string name="mm_dd_yy">MMM, dd yyyy</string>
    <string name="str_add_edit_admins">Add or edit admin members</string>
    <string name="str_create_edit_group">Select members to add or update</string>
    <string name="str_error_title">Please enter title</string>
    <string name="str_error_desc">Please enter Description</string>
    <string name="str_error_body_type">Please enter body type</string>
    <string name="str_select_start_Date">Please select start date</string>
    <string name="str_select_end_Date">Please select end date</string>
    <string name="str_height_ft_msg">Please enter height in FT </string>
    <string name="select_language">Select Language</string>
    <string name="select_body_type">Select Body Type</string>
    <string name="select_skin_tone">Select Skin Tone</string>
    <string name="update">Update</string>
    <string name="str_exit">Do you want to exit ? </string>
    <string name="str_audition_casting">Casting Agency</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="delete_dialog">Are you sure you want to delete ? </string>
    <string name="str_logout">Do you want to logout ? </string>
    <string name="str_choose_media">Choose Media</string>
    <string name="str_images">Choose Images</string>
    <string name="str_videos">Choose Video</string>
    <string name="str_cancel">Cancel</string>
    <string name="tv_media">No Media Found.</string>
    <string name="str_loading">Please wait..</string>
    <string name="no_application_found">No Application Found</string>
    <string name="no_project_found">No Project Found</string>
    <string name="no_pending_project">No Pending Project Found</string>
    <string name="no_shortlisted_project">No Shortlisted Project Found</string>
    <string name="str_img">Image</string>
    <string name="actor">Actor</string>
    <string name="actress">Actress</string>
    <string name="str_first_time_here">First Time Here</string>
    <string name="swipe_to_continue">Swipe to continue</string>
    <string name="swipe_to_complete">Swipe to Complete</string>
    <string name="total_applications_received">Total Applications Received</string>
    <string name="applicants">Applicants</string>
    <string name="no_blocked_user_found">No Blocked User Found</string>
    <string name="str_blocked_user">Blocked User List Fragment</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="chat">Chat</string>
    <string name="dlg_choose_file_from">Select file from…</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="reconnect_failed">Reconnecting Failed</string>
    <string name="public_group_chat_cannot_be_deleted">Public Group chat can be deleted only by owner</string>
    <string name="error_leave_chat">Error leaving room</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_hide">Hide</string>
    <string name="error_joining_chat">Unable to Join chat</string>
    <string name="error_getting_chat_service">Unable to get Chat Service</string>
    <string name="verify_email_address">Email verification link is sent to your registered email id. Please verify it before login.</string>
</resources>