<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/ic_login_logo"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvWelcome"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/str_welcome"
                android:textSize="@dimen/_24sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

            <com.auditionstreet.castingagency.customviews.CustomTextView
                android:id="@+id/tvCreateAccount"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_create_account"
                android:textColor="@color/gray"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />


            <ImageView
                android:id="@+id/imgProfileImage"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/ic_login_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />

            <com.auditionstreet.castingagency.customviews.CustomTextView
                android:id="@+id/tvAddProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/str_create_account"
                android:textColor="@color/gray"
                android:textSize="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProfileImage" />
            <com.auditionstreet.castingagency.customviews.CustomEditText
                android:id="@+id/etxUserName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/edittext_round_layout"
                android:gravity="center_vertical"
                android:hint="@string/str_user_name"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddProfileImage" />

            <com.auditionstreet.castingagency.customviews.CustomEditText
                android:id="@+id/etxEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/edittext_round_layout"
                android:gravity="center_vertical"
                android:hint="@string/str_email"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxUserName" />

            <com.auditionstreet.castingagency.customviews.CustomEditText
                android:id="@+id/etxPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/edittext_round_layout"
                android:gravity="center_vertical"
                android:hint="@string/str_password"
                android:textSize="@dimen/_13sdp"
                android:paddingLeft="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxEmail" />

            <com.auditionstreet.castingagency.customviews.CustomEditText
                android:id="@+id/etxConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:background="@drawable/edittext_round_layout"
                android:gravity="center_vertical"
                android:hint="@string/str_confirm_password"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxPassword" />

            <com.auditionstreet.castingagency.customviews.CustomButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:text="@string/str_sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                android:background="@drawable/button_round_background"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etxConfirmPassword" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>