<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_18sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imgDelete"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgEdit"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:background="@drawable/ic_edit"
                android:contentDescription="@string/str_year"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgDelete"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/black"
                android:contentDescription="@string/str_year"
                app:layout_constraintEnd_toStartOf="@+id/imgEdit"
                app:layout_constraintTop_toTopOf="parent" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvCriteria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/str_criteria"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18ssp"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/str_age"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCriteria" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvAgeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toRightOf="@+id/tvAge"
                app:layout_constraintTop_toBottomOf="@+id/tvCriteria" />


            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvtvHeightDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/str_height"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAge" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvHeightDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toRightOf="@+id/tvtvHeightDetail"
                app:layout_constraintTop_toBottomOf="@+id/tvAge" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/str_languages"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvtvHeightDetail" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvLanguageDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toRightOf="@+id/tvLanguage"
                app:layout_constraintTop_toBottomOf="@+id/tvtvHeightDetail" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvDates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/str_dates"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLanguageDetail" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvDatesDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDates" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvtvLocationDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/str_location"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvLocationDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvtvLocationDetail" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/str_description"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDatesDetail" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvDescDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_7sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc" />

            <com.auditionstreet.castingagency.customviews.CustomTextViewBold
                android:id="@+id/tvApplicants"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:text="@string/applicants"
                android:textColor="@color/gray"
                android:textSize="@dimen/_16sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDescDetail" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvApplicant"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="visible"
                android:nestedScrollingEnabled="false"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_45sdp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/tvApplicants" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>